--- a/app/package.json
+++ b/app/package.json
@@ -69,6 +69,7 @@
     "copy-node-modules": "^1.0.4",
     "copy-webpack-plugin": "^4.5.2",
     "dom-testing-library": "^2.3.2",
+    "git-revision-webpack-plugin": "^3.0.3",
     "husky": "^0.14.3",
     "jest": "^23.0.0",
     "jest-emotion": "^9.1.3",
