--- a/app/package.json
+++ b/app/package.json
@@ -95,6 +95,7 @@
     "@babel/polyfill": "^7.0.0",
     "@reach/router": "^1.1.1",
     "@types/base-64": "^0.1.2",
+    "@types/lodash.startcase": "^4.4.4",
     "@types/react-stripe-elements": "^1.1.7",
     "aws-sdk": "^2.383.0",
     "babel-plugin-emotion": "^9.1.0",
@@ -107,6 +108,7 @@
     "es-cookie": "^1.2.0",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
+    "lodash.startcase": "^4.4.0",
     "moment": "^2.22.2",
     "node-fetch": "^2.1.2",
     "ophan-tracker-js": "^1.3.16",
