--- a/app/package.json
+++ b/app/package.json
@@ -55,6 +55,7 @@
     "@types/jest": "^22.2.3",
     "@types/node": "^10.1.2",
     "@types/node-fetch": "^1.6.9",
+    "@types/number-to-words": "^1.2.0",
     "@types/prettier": "^1.12.4",
     "@types/raven": "^2.5.1",
     "@types/reach__router": "^1.2.2",
@@ -111,6 +112,7 @@
     "lodash.startcase": "^4.4.0",
     "moment": "^2.22.2",
     "node-fetch": "^2.1.2",
+    "number-to-words": "^1.2.4",
     "ophan-tracker-js": "^1.3.16",
     "raven": "^2.6.2",
     "raven-js": "^3.25.2",
