--- a/app/package.json
+++ b/app/package.json
@@ -94,6 +94,7 @@
     "tslint-react": "^3.6.0",
     "typescript": "^2.8.1",
     "webpack": "^4.16.5",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.4",
