--- a/app/package.json
+++ b/app/package.json
@@ -72,6 +72,7 @@
     "assets-webpack-plugin": "^3.9.5",
     "babel-loader": "^8.0.0-beta.4",
     "babel-plugin-emotion": "^9.1.0",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-source-map-support": "^2.0.1",
     "copy-node-modules": "^1.0.4",
     "copy-webpack-plugin": "^4.5.2",
