tweaked the 'webpack-bundle-analyzer' usage to run on 'precommit' rather than alongside dev (as that was showing the dev bundle - not useful)

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-dist/*
 target/
 lib/
 coverage/
 *.log
 
 .idea/
-.idea/workspace.xml
 *.iml
 
 *.code-workspace
@@ -17,5 +15,5 @@ logs/
 /public/*.js
 /public/webpack-assets.json
 
-app/dist/*
-app/coverage/*
+app/dist/
+tmp_client_bundle/
