--- a/app/package.json
+++ b/app/package.json
@@ -6,17 +6,22 @@
     "type-check": "tsc --noEmit --skipLibCheck",
     "pretty-quick": "pretty-quick",
     "lint": "tslint -p .",
-    "bundle": "copy-node-modules . ./dist && webpack --config webpack.production.js",
+    "bundle": "copy-node-modules . ./dist && yarn webpack --config webpack.production.js",
     "bundle-dev": "yarn bundle-dev-server && yarn bundle-dev-client",
     "bundle-dev-server": "webpack --config webpack.dev.server.js",
     "bundle-dev-client": "webpack --config webpack.dev.client.js",
+    "bundle-check-client": "webpack --config webpack.prod.client.bundle-check.js",
     "serve-dev": "webpack-dev-server --config ./webpack.dev.client.js --public manage.thegulocal.com",
     "watch": "yarn bundle-dev-server && (yarn bundle-dev-server -w & yarn start & yarn serve-dev)",
     "test": "jest --coverage && yarn type-check && yarn lint ",
     "updateSnapshot": "jest -u",
-    "fix": "pretty-quick && tslint --fix -p .",
-    "precommit": "pretty-quick --staged && tslint --fix -p .",
+    "fix": "pretty-quick --staged && tslint --fix -p .",
     "riffraff": "VERBOSE=true ARTEFACT_PATH=$(pwd) riffraff-artefact"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn fix && GIT_DIR=../.git && (yarn bundle-check-client & yarn type-check)"
+    }
   },
   "cloudformation": "../cfn.yaml",
   "riffraffFile": "../riff-raff.yaml",
@@ -78,7 +83,7 @@
     "copy-webpack-plugin": "^4.5.2",
     "dom-testing-library": "^2.3.2",
     "git-revision-webpack-plugin": "^3.0.3",
-    "husky": "^0.14.3",
+    "husky": "^1.3.1",
     "jest": "^23.0.0",
     "jest-emotion": "^9.1.3",
     "jest-teamcity-reporter": "^0.9.0",
