--- a/app/package.json
+++ b/app/package.json
@@ -72,6 +72,7 @@
     "@types/react-dom": "^16.0.5",
     "@types/react-stripe-elements": "^1.1.7",
     "@types/react-test-renderer": "^16.0.1",
+    "@types/url-parse": "^1.4.2",
     "@types/webpack": "^4.4.9",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
@@ -129,6 +130,7 @@
     "react-stripe-elements": "^2.0.1",
     "source-map-support": "^0.5.6",
     "stylis-pxtorem": "^0.0.2",
+    "url-parse": "^1.4.4",
     "webpack-node-externals": "^1.7.2",
     "winston": "^3.0.0"
   },
