Beast commit - Emotion10 upgrade - pretty broad changes required

--- a/app/package.json
+++ b/app/package.json
@@ -52,6 +52,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
+    "@emotion/babel-preset-css-prop": "^10.0.7",
     "@types/assets-webpack-plugin": "^3.5.1",
     "@types/base-64": "^0.1.2",
     "@types/bunyan": "^1.8.4",
@@ -78,7 +79,6 @@
     "@types/webpack-node-externals": "^1.6.3",
     "assets-webpack-plugin": "^3.9.5",
     "babel-loader": "^8.0.0-beta.4",
-    "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-source-map-support": "^2.0.1",
     "copy-node-modules": "^1.0.4",
@@ -87,7 +87,7 @@
     "git-revision-webpack-plugin": "^3.0.3",
     "husky": "^1.3.1",
     "jest": "^23.0.0",
-    "jest-emotion": "^9.1.3",
+    "jest-emotion": "^10.0.7",
     "jest-teamcity-reporter": "^0.9.0",
     "node-riffraff-artefact": "^2.0.1",
     "nodemon": "^1.17.5",
@@ -95,12 +95,12 @@
     "pretty-quick": "^1.6.0",
     "react-test-renderer": "^16.4.0",
     "react-testing-library": "^3.1.3",
-    "ts-jest": "^22.4.6",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.13.0",
-    "tslint-immutable": "^4.5.3",
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-immutable": "^5.1.2",
     "tslint-react": "^3.6.0",
-    "typescript": "^2.8.1",
+    "typescript": "^3.3.1",
     "webpack": "^4.16.5",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.0",
@@ -109,13 +109,13 @@
     "whatwg-fetch": "^2.0.4"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
     "@reach/router": "^1.2.1",
     "aws-sdk": "^2.383.0",
     "base-64": "^0.1.0",
     "browserslist-useragent": "^2.0.1",
     "color": "^3.0.0",
-    "emotion": "^9.1.3",
-    "emotion-server": "^9.1.3",
     "es-cookie": "^1.2.0",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
@@ -132,7 +132,7 @@
     "stylis-pxtorem": "^0.0.2",
     "url-parse": "^1.4.4",
     "webpack-node-externals": "^1.7.2",
-    "winston": "^3.0.0"
+    "winston": "^3.2.1"
   },
   "license": "UNLICENSED"
 }
