--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "watch": "yarn bundle-dev-server && (yarn bundle-dev-server -w & yarn start & yarn serve-dev)",
     "test": "jest --coverage && yarn type-check && yarn lint ",
     "updateSnapshot": "jest -u",
+    "sonar-scanner": "node_modules/sonar-scanner/bin/sonar-scanner",
     "fix": "pretty-quick --staged && tslint --fix -p .",
     "riffraff": "VERBOSE=true ARTEFACT_PATH=$(pwd) riffraff-artefact"
   },
@@ -95,6 +96,7 @@
     "pretty-quick": "^1.6.0",
     "react-test-renderer": "^16.4.0",
     "react-testing-library": "^3.1.3",
+    "sonar-scanner": "^3.1.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
