--- a/app/package.json
+++ b/app/package.json
@@ -75,6 +75,7 @@
     "@types/reach__router": "^1.2.2",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "@types/react-daterange-picker": "^2.0.1",
     "@types/react-stripe-elements": "^1.1.7",
     "@types/react-test-renderer": "^16.8.2",
     "@types/url-parse": "^1.4.2",
@@ -126,6 +127,8 @@
     "express": "^4.16.3",
     "helmet": "^3.12.1",
     "lodash": "^4.17.15",
+    "moment": "^2.18.1",
+    "moment-range": "^3.0.3",
     "node-fetch": "^2.1.2",
     "number-to-words": "^1.2.4",
     "ophan-tracker-js": "^1.3.16",
@@ -133,6 +136,7 @@
     "raven-js": "^3.25.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-daterange-picker": "^2.0.1",
     "react-stripe-elements": "^2.0.1",
     "reset-css": "^3.0.0",
     "source-map-support": "^0.5.6",
