--- a/app/package.json
+++ b/app/package.json
@@ -99,6 +99,7 @@
     "nodemon": "^1.17.5",
     "prettier": "1.13.2",
     "pretty-quick": "^1.6.0",
+    "raw-loader": "^2.0.0",
     "react-test-renderer": "^16.8.6",
     "react-testing-library": "^3.1.3",
     "snyk": "^1.216.5",
