override browser styles with default/reset styles

--- a/app/package.json
+++ b/app/package.json
@@ -81,6 +81,7 @@
     "assets-webpack-plugin": "^3.9.5",
     "babel-loader": "^8.0.0-beta.4",
     "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-preval": "^3.0.1",
     "babel-plugin-source-map-support": "^2.0.1",
     "copy-node-modules": "^1.0.4",
     "copy-webpack-plugin": "^4.5.2",
@@ -130,6 +131,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.2",
     "react-stripe-elements": "^2.0.1",
+    "reset-css": "^3.0.0",
     "source-map-support": "^0.5.6",
     "stylis-pxtorem": "^0.0.2",
     "url-parse": "^1.4.4",
