--- a/app/package.json
+++ b/app/package.json
@@ -56,6 +56,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
     "@emotion/babel-preset-css-prop": "^10.0.14",
+    "@testing-library/react": "^8.0.1",
     "@types/assets-webpack-plugin": "^3.5.1",
     "@types/base-64": "^0.1.2",
     "@types/bunyan": "^1.8.4",
