--- a/app/package.json
+++ b/app/package.json
@@ -87,6 +87,7 @@
     "babel-plugin-source-map-support": "^2.0.1",
     "copy-node-modules": "^1.0.4",
     "copy-webpack-plugin": "^4.5.2",
+    "desvg-loader": "^0.1.0",
     "dom-testing-library": "^2.3.2",
     "git-revision-webpack-plugin": "^3.0.3",
     "husky": "^1.3.1",
@@ -101,6 +102,7 @@
     "react-testing-library": "^3.1.3",
     "snyk": "^1.192.3",
     "sonar-scanner": "^3.1.0",
+    "svg-loader": "^0.0.2",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
