--- a/cfn.yaml
+++ b/cfn.yaml
@@ -86,7 +86,7 @@ Resources:
         - !Ref InstanceSecurityGroup
       InstanceType: !FindInMap [ StageVariables, !Ref Stage, InstanceType ]
       IamInstanceProfile: !Ref InstanceProfile
-      AssociatePublicIpAddress: true
+      AssociatePublicIpAddress: false
       UserData:
         Fn::Base64: !Sub
           - |+
