--- a/app/package.json
+++ b/app/package.json
@@ -111,7 +111,8 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.4",
-    "whatwg-fetch": "^2.0.4"
+    "whatwg-fetch": "^2.0.4",
+    "snyk": "^1.192.3"
   },
   "dependencies": {
     "@emotion/core": "^10.0.14",
@@ -138,8 +139,7 @@
     "stylis-pxtorem": "^0.0.2",
     "url-parse": "^1.4.4",
     "webpack-node-externals": "^1.7.2",
-    "winston": "^3.2.1",
-    "snyk": "^1.192.3"
+    "winston": "^3.2.1"
   },
   "license": "UNLICENSED",
   "snyk": true
