--- a/app/package.json
+++ b/app/package.json
@@ -99,6 +99,7 @@
     "pretty-quick": "^1.6.0",
     "react-test-renderer": "^16.4.0",
     "react-testing-library": "^3.1.3",
+    "snyk": "^1.192.3",
     "sonar-scanner": "^3.1.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
@@ -111,8 +112,7 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.4",
-    "whatwg-fetch": "^2.0.4",
-    "snyk": "^1.192.3"
+    "whatwg-fetch": "^2.0.4"
   },
   "dependencies": {
     "@emotion/core": "^10.0.14",
@@ -131,7 +131,7 @@
     "ophan-tracker-js": "^1.3.16",
     "raven": "^2.6.2",
     "raven-js": "^3.25.2",
-    "react": "^16.4.1",
+    "react": "^16.8.6",
     "react-dom": "^16.4.2",
     "react-stripe-elements": "^2.0.1",
     "reset-css": "^3.0.0",
