--- a/app/package.json
+++ b/app/package.json
@@ -66,7 +66,7 @@
     "@types/google.analytics": "^0.0.39",
     "@types/helmet": "^0.0.37",
     "@types/jest": "^22.2.3",
-    "@types/lodash.startcase": "^4.4.4",
+    "@types/lodash": "^4.14.136",
     "@types/node": "^10.1.2",
     "@types/node-fetch": "^1.6.9",
     "@types/number-to-words": "^1.2.0",
@@ -124,7 +124,7 @@
     "color": "^3.0.0",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
-    "lodash.startcase": "^4.4.0",
+    "lodash": "^4.17.15",
     "node-fetch": "^2.1.2",
     "number-to-words": "^1.2.4",
     "ophan-tracker-js": "^1.3.16",
