--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
     "bundle-check-client-if-changed": "((git diff --name-only --cached | grep 'yarn.lock') && yarn bundle-check-client) || true",
     "serve-dev": "webpack-dev-server --config ./webpack.dev.client.js --public manage.thegulocal.com",
     "watch": "yarn bundle-dev-server && (yarn bundle-dev-server -w & yarn start & yarn serve-dev)",
-    "test": "jest --coverage && yarn type-check && yarn lint ",
+    "test": "snyk test && jest --coverage && yarn type-check && yarn lint ",
     "updateSnapshot": "jest -u",
     "sonar-scanner": "cd .. && app/node_modules/sonar-scanner/bin/sonar-scanner -Dsonar.projectVersion=$(git rev-parse --short HEAD)",
     "fix": "pretty-quick --staged && tslint --fix -p .",
@@ -100,7 +100,7 @@
     "pretty-quick": "^1.6.0",
     "react-test-renderer": "^16.8.6",
     "react-testing-library": "^3.1.3",
-    "snyk": "^1.192.3",
+    "snyk": "^1.216.5",
     "sonar-scanner": "^3.1.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
