--- a/app/package.json
+++ b/app/package.json
@@ -122,6 +122,7 @@
     "aws-sdk": "^2.383.0",
     "base-64": "^0.1.0",
     "color": "^3.0.0",
+    "consent-string": "^1.5.1",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
     "lodash": "^4.17.15",
