--- a/app/package.json
+++ b/app/package.json
@@ -124,6 +124,7 @@
     "@guardian/consent-management-platform": "^0.3.0",
     "@guardian/src-foundations": "^0.2.0",
     "@reach/router": "^1.2.1",
+    "@types/js-cookie": "^2.2.2",
     "aws-sdk": "^2.383.0",
     "base-64": "^0.1.0",
     "color": "^3.0.0",
@@ -131,6 +132,7 @@
     "express": "^4.16.3",
     "formik": "^1.5.8",
     "helmet": "^3.21.1",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "moment": "^2.18.1",
     "moment-range": "^3.0.3",
