--- a/app/package.json
+++ b/app/package.json
@@ -129,6 +129,7 @@
     "base-64": "^0.1.0",
     "color": "^3.0.0",
     "consent-string": "^1.5.1",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.3",
     "formik": "^1.5.8",
     "helmet": "^3.21.1",
