--- a/nginx/manage-frontend.conf
+++ b/nginx/manage-frontend.conf
@@ -8,16 +8,14 @@ server {
 }
 
 server {
-    listen 443;
+    listen 443 ssl;
     server_name manage.thegulocal.com;
+    proxy_http_version 1.1; # this is essential for chunked responses to work
 
-    ssl on;
-    ssl_certificate STAR_thegulocal_com_exp2020-01-09.crt; ## Supplied by https://github.com/guardian/identity-platform#setup-nginx-for-local-development
-    ssl_certificate_key STAR_thegulocal_com_exp2020-01-09.key; ## ditto
-
+    ssl_certificate manage.thegulocal.com.crt;
+    ssl_certificate_key manage.thegulocal.com.key;
     ssl_session_timeout 5m;
-
-    ssl_protocols TLSv1;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
