correcting mistake in cfn, adding to readme

--- a/cfn.yaml
+++ b/cfn.yaml
@@ -247,7 +247,7 @@ Resources:
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
-          CidrIp: !Ref BastionSecurityGroup
+          SourceSecurityGroupId: !Ref BastionSecurityGroup
         - IpProtocol: tcp
           FromPort: 9233
           ToPort: 9233
