--- a/app/package.json
+++ b/app/package.json
@@ -123,7 +123,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.14",
     "@emotion/styled": "^10.0.14",
-    "@guardian/consent-management-platform": "1.0.2",
+    "@guardian/consent-management-platform": "1.1.0-beta-5",
     "@guardian/src-foundations": "^0.2.0",
     "@reach/router": "^1.2.1",
     "aws-sdk": "^2.383.0",
