--- a/app/package.json
+++ b/app/package.json
@@ -67,7 +67,7 @@
     "@types/express": "^4.11.1",
     "@types/google.analytics": "^0.0.39",
     "@types/helmet": "^0.0.37",
-    "@types/jest": "^22.2.3",
+    "@types/jest": "^24.0.25",
     "@types/js-cookie": "^2.2.2",
     "@types/lodash": "^4.14.136",
     "@types/node": "^10.1.2",
@@ -87,6 +87,7 @@
     "@types/webpack-node-externals": "^1.6.3",
     "@types/yup": "^0.26.23",
     "assets-webpack-plugin": "^3.9.5",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-preval": "^4.0.0",
@@ -96,7 +97,7 @@
     "dom-testing-library": "^2.3.2",
     "git-revision-webpack-plugin": "^3.0.3",
     "husky": "^1.3.1",
-    "jest": "^23.0.0",
+    "jest": "^24.9.0",
     "jest-emotion": "^10.0.7",
     "jest-teamcity-reporter": "^0.9.0",
     "node-riffraff-artefact": "^2.0.1",
@@ -108,7 +109,7 @@
     "react-testing-library": "^3.1.3",
     "snyk": "^1.216.5",
     "sonar-scanner": "^3.1.0",
-    "ts-jest": "^23.10.5",
+    "ts-jest": "^24.2.0",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-immutable": "^5.1.2",
