--- a/app/package.json
+++ b/app/package.json
@@ -64,6 +64,7 @@
     "@types/color": "^3.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/csurf": "^1.9.35",
+    "@types/enzyme": "^3.10.4",
     "@types/express": "^4.11.1",
     "@types/google.analytics": "^0.0.39",
     "@types/helmet": "^0.0.37",
@@ -94,6 +95,7 @@
     "copy-node-modules": "^1.0.4",
     "copy-webpack-plugin": "^4.5.2",
     "dom-testing-library": "^2.3.2",
+    "enzyme": "^3.11.0",
     "git-revision-webpack-plugin": "^3.0.3",
     "husky": "^1.3.1",
     "jest": "^23.0.0",
