--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "serve-dev": "webpack-dev-server --config ./webpack.dev.client.js --public manage.thegulocal.com",
     "watch": "yarn bundle-dev-server && (yarn bundle-dev-server -w & yarn start & yarn serve-dev)",
     "test": "snyk test && jest --coverage && yarn type-check && yarn lint ",
+    "jest": "jest",
     "updateSnapshot": "jest -u",
     "sonar-scanner": "cd .. && app/node_modules/sonar-scanner/bin/sonar-scanner -Dsonar.projectVersion=$(git rev-parse --short HEAD)",
     "fix": "pretty-quick --staged && tslint --fix -p .",
@@ -148,7 +149,6 @@
     "lodash": "^4.17.15",
     "moment": "^2.18.1",
     "moment-range": "^3.0.3",
-    "node-fetch": "^2.1.2",
     "number-to-words": "^1.2.4",
     "ophan-tracker-js": "^1.3.16",
     "raven": "^2.6.2",
