--- a/cfn.yaml
+++ b/cfn.yaml
@@ -326,9 +326,9 @@ Resources:
           MetricStat:
             Metric:
               Namespace: AWS/ApplicationELB
-              MetricName: HTTPCode_Backend_5XX
+              MetricName: HTTPCode_Target_5XX_Count
               Dimensions:
-                - Name: LoadBalancerName
+                - Name: LoadBalancer
                   Value: !GetAtt ElasticLoadBalancer.LoadBalancerFullName
                 - Name: TargetGroup
                   Value: !GetAtt TargetGroup.TargetGroupFullName
@@ -342,7 +342,7 @@ Resources:
               Namespace: AWS/ApplicationELB
               MetricName: HTTPCode_ELB_5XX
               Dimensions:
-                - Name: LoadBalancerName
+                - Name: LoadBalancer
                   Value: !GetAtt ElasticLoadBalancer.LoadBalancerFullName
                 - Name: TargetGroup
                   Value: !GetAtt TargetGroup.TargetGroupFullName
