cleanup aftre testing

--- a/cfn.yaml
+++ b/cfn.yaml
@@ -309,10 +309,10 @@ Resources:
 
   High5XXRateAlarm:
     Type: AWS::CloudWatch::Alarm
-    # Condition: CreateProdResources
+    Condition: CreateProdResources
     Properties:
       AlarmActions:
-        - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:fulfilment-dev-mk-test
+        - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:fulfilment-dev
       AlarmName: !Sub High 5XX rate for manage-frontend in ${Stage}
       ComparisonOperator: GreaterThanOrEqualToThreshold
       Threshold: 3
