--- a/cfn.yaml
+++ b/cfn.yaml
@@ -39,6 +39,12 @@ Conditions:
   CreateProdResources: !Equals [!Ref "Stage", "PROD"]
   CreateCodeResources: !Equals [!Ref "Stage", "CODE"]
 Mappings:
+  Constants:
+    Alarm:
+      Process: Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit
+      Urgent: URGENT 9-5 -
+    MetricFilters:
+      MetricNamespace: manage-frontend
   StageVariables:
     CODE:
       MaxInstances: 2
@@ -313,7 +319,16 @@ Resources:
     Properties:
       AlarmActions:
         - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:fulfilment-dev
-      AlarmName: !Sub High 5XX rate for manage-frontend in ${Stage}
+      AlarmName: !Join
+        - " "
+        - - !FindInMap [Constants, Alarm, Urgent]
+          - !Ref "Stage"
+          - !FindInMap [Constants, MetricFilters, MetricNamespace]
+          - "High 5XX rate"
+      AlarmDescription: !Join
+        - " "
+        - - Impact - we're serving errors to too many people
+          - !FindInMap [Constants, Alarm, Process]
       ComparisonOperator: GreaterThanOrEqualToThreshold
       Threshold: 3
       EvaluationPeriods: 2
