upgrade src to v0.17

--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
     "bundle-check-client-if-changed": "((git diff --name-only --cached | grep 'yarn.lock') && yarn bundle-check-client) || true",
     "serve-dev": "webpack-dev-server --config ./webpack.dev.client.js --public manage.thegulocal.com",
     "watch": "yarn bundle-dev-server && (yarn bundle-dev-server -w & yarn start & yarn serve-dev)",
-    "test": "snyk test && jest --coverage && yarn type-check && yarn lint ",
+    "test": "jest --coverage && yarn type-check && yarn lint ",
     "jest": "jest",
     "updateSnapshot": "jest -u",
     "sonar-scanner": "cd .. && app/node_modules/sonar-scanner/bin/sonar-scanner -Dsonar.projectVersion=$(git rev-parse --short HEAD)",
@@ -130,12 +130,12 @@
     "@emotion/core": "^10.0.14",
     "@emotion/styled": "^10.0.14",
     "@guardian/consent-management-platform": "1.1.0",
-    "@guardian/src-button": "^0.8.1",
-    "@guardian/src-checkbox": "^0.4.0",
-    "@guardian/src-foundations": "^0.12.4",
-    "@guardian/src-radio": "^0.7.0",
-    "@guardian/src-svgs": "^0.13.0",
-    "@guardian/src-text-input": "^0.13.0",
+    "@guardian/src-button": "^0.17.0",
+    "@guardian/src-checkbox": "^0.17.0",
+    "@guardian/src-foundations": "^0.17.0",
+    "@guardian/src-radio": "^0.17.0",
+    "@guardian/src-svgs": "^0.17.0",
+    "@guardian/src-text-input": "^0.17.0",
     "@reach/router": "^1.2.1",
     "aws-sdk": "^2.383.0",
     "base-64": "^0.1.0",
