--- a/app/package.json
+++ b/app/package.json
@@ -111,6 +111,7 @@
     "raw-loader": "^2.0.0",
     "react-test-renderer": "^16.8.6",
     "react-testing-library": "^3.1.3",
+    "snyk": "^1.316.1",
     "sonar-scanner": "^3.1.0",
     "ts-jest": "^24.2.0",
     "tslint": "^5.12.1",
@@ -161,8 +162,7 @@
     "url-parse": "^1.4.4",
     "webpack-node-externals": "^1.7.2",
     "winston": "^3.2.1",
-    "yup": "^0.27.0",
-    "snyk": "^1.316.1"
+    "yup": "^0.27.0"
   },
   "license": "UNLICENSED",
   "snyk": true
