put custom CloudWatch Metric for every log event named after the loggingCode, with Dimensions for outcome (success/error), variant (account overview / legacy) and stage (DEV/CODE/PROD)

--- a/cfn.yaml
+++ b/cfn.yaml
@@ -162,6 +162,13 @@ Resources:
                   - logs:CreateLogStream
                   - logs:PutLogEvents
                 Resource: !GetAtt ManageFrontendLogGroup.Arn
+        - PolicyName: PushMetrics
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action: cloudwatch:PutMetricData
+                Resource: "*"
         - PolicyName: ReadPrivateCredentials
           PolicyDocument:
             Statement:
