--- a/app/package.json
+++ b/app/package.json
@@ -77,7 +77,6 @@
     "@types/node-fetch": "^1.6.9",
     "@types/number-to-words": "^1.2.0",
     "@types/prettier": "^1.19.0",
-    "@types/raven": "^2.5.1",
     "@types/reach__router": "^1.2.2",
     "@types/react": "^16.8.23",
     "@types/react-daterange-picker": "^2.0.1",
@@ -138,6 +137,8 @@
     "@guardian/src-svgs": "^0.18.1",
     "@guardian/src-text-input": "^0.18.1",
     "@reach/router": "^1.2.1",
+    "@sentry/browser": "^5.15.5",
+    "@sentry/node": "^5.15.5",
     "aws-sdk": "^2.383.0",
     "base-64": "^0.1.0",
     "color": "^3.0.0",
@@ -152,8 +153,6 @@
     "moment-range": "^3.0.3",
     "number-to-words": "^1.2.4",
     "ophan-tracker-js": "^1.3.16",
-    "raven": "^2.6.2",
-    "raven-js": "^3.25.2",
     "react": "^16.8.6",
     "react-daterange-picker": "^2.0.1",
     "react-dom": "^16.8.6",
