--- a/app/package.json
+++ b/app/package.json
@@ -81,7 +81,6 @@
     "@types/react": "^16.8.23",
     "@types/react-daterange-picker": "^2.0.1",
     "@types/react-dom": "^16.8.4",
-    "@types/react-stripe-elements": "^1.3.2",
     "@types/react-test-renderer": "^16.8.2",
     "@types/url-parse": "^1.4.2",
     "@types/webpack": "^4.4.9",
@@ -139,6 +138,8 @@
     "@reach/router": "^1.2.1",
     "@sentry/browser": "^5.15.5",
     "@sentry/node": "^5.15.5",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.7.0",
     "aws-sdk": "^2.383.0",
     "base-64": "^0.1.0",
     "color": "^3.0.0",
@@ -156,7 +157,6 @@
     "react": "^16.8.6",
     "react-daterange-picker": "^2.0.1",
     "react-dom": "^16.8.6",
-    "react-stripe-elements": "^5.0.0",
     "source-map-support": "^0.5.6",
     "stylis-pxtorem": "^0.0.2",
     "url-parse": "^1.4.4",
