--- a/app/package.json
+++ b/app/package.json
@@ -87,6 +87,7 @@
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
     "@types/yup": "^0.26.23",
+    "@types/aws4": "^1.5.1",
     "assets-webpack-plugin": "^3.9.5",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
@@ -163,7 +164,8 @@
     "url-parse": "^1.4.4",
     "webpack-node-externals": "^1.7.2",
     "winston": "^3.2.1",
-    "yup": "^0.27.0"
+    "yup": "^0.27.0",
+    "aws4": "^1.10.0"
   },
   "license": "UNLICENSED",
   "snyk": true
