[RB TR] wire in the `invoicing-api` (making use of the aws signature functionality added in https://github.com/guardian/manage-frontend/pull/465, with a few refactors)
Co-authored-by: Tom Richards <tom.richards@guardian.co.uk>

--- a/cfn.yaml
+++ b/cfn.yaml
@@ -190,6 +190,9 @@ Resources:
                   - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/membership-DEV-*
                   - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/membership-CODE-*
                   - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/membership-${Stage}-* # avoids PROD resources being available to lower environments
+                  - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/support-DEV-*
+                  - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/support-CODE-*
+                  - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/support-${Stage}-* # avoids PROD resources being available to lower environments
         - PolicyName: DiscoverApiGatewayApiKeys
           PolicyDocument:
             Statement:
