--- a/app/package.json
+++ b/app/package.json
@@ -60,6 +60,7 @@
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@testing-library/react": "^8.0.1",
     "@types/assets-webpack-plugin": "^3.9.0",
+    "@types/aws4": "^1.5.1",
     "@types/base-64": "^0.1.2",
     "@types/bunyan": "^1.8.4",
     "@types/color": "^3.0.0",
@@ -87,7 +88,6 @@
     "@types/webpack-merge": "^4.1.5",
     "@types/webpack-node-externals": "^1.7.1",
     "@types/yup": "^0.26.23",
-    "@types/aws4": "^1.5.1",
     "assets-webpack-plugin": "^3.10.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.6",
@@ -143,6 +143,7 @@
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.7.0",
     "aws-sdk": "^2.746.0",
+    "aws4": "^1.10.1",
     "base-64": "^0.1.0",
     "color": "^3.0.0",
     "cookie-parser": "^1.4.4",
@@ -154,6 +155,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.18.1",
     "moment-range": "^3.0.3",
+    "node-fetch": "^2.6.1",
     "number-to-words": "^1.2.4",
     "ophan-tracker-js": "^1.3.16",
     "react": "^16.13.1",
@@ -164,8 +166,7 @@
     "url-parse": "^1.4.4",
     "webpack-node-externals": "^1.7.2",
     "winston": "^3.2.1",
-    "yup": "^0.28.2",
-    "aws4": "^1.10.1"
+    "yup": "^0.28.2"
   },
   "license": "UNLICENSED",
   "snyk": true
