--- a/app/package.json
+++ b/app/package.json
@@ -58,7 +58,7 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@emotion/babel-preset-css-prop": "^10.0.27",
-    "@testing-library/react": "^8.0.1",
+    "@testing-library/react": "^11.1.0",
     "@types/assets-webpack-plugin": "^3.9.0",
     "@types/aws4": "^1.5.1",
     "@types/base-64": "^0.1.2",
@@ -101,6 +101,7 @@
     "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^1.3.1",
     "jest": "^26.3.0",
+    "jest-each": "^26.6.2",
     "jest-emotion": "^10.0.32",
     "jest-teamcity-reporter": "^0.9.0",
     "node-riffraff-artefact": "^2.0.1",
