--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,17 @@
 {
   "editor.formatOnSave": true,
-  "typescript.tsdk": "./app/node_modules/typescript/lib"
+  "typescript.tsdk": "./app/node_modules/typescript/lib",
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#f529ab",
+    "activityBar.activeBorder": "#8bd50a",
+    "activityBar.background": "#f529ab",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#8bd50a",
+    "activityBarBadge.foreground": "#15202b",
+    "statusBar.background": "#e00b93",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#f529ab"
+  },
+  "peacock.color": "#e00b93"
 }
