--- a/app/package.json
+++ b/app/package.json
@@ -132,6 +132,7 @@
     "@guardian/consent-management-platform": "^3.4.8",
     "@guardian/src-button": "^2.5.0",
     "@guardian/src-checkbox": "^1.8.0",
+    "@guardian/src-choice-card": "^2.5.0",
     "@guardian/src-foundations": "^1.9.1",
     "@guardian/src-icons": "^1.8.0",
     "@guardian/src-inline-error": "^1.9.1",
