--- a/app/package.json
+++ b/app/package.json
@@ -80,7 +80,6 @@
     "@types/prettier": "^1.19.0",
     "@types/reach__router": "^1.2.2",
     "@types/react": "^16.8.23",
-    "@types/react-daterange-picker": "^2.0.1",
     "@types/react-dom": "^16.8.4",
     "@types/react-test-renderer": "^16.8.2",
     "@types/url-parse": "^1.4.3",
@@ -144,6 +143,7 @@
     "@sentry/node": "^5.22.3",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.7.0",
+    "@types/react-date-range": "^1.1.4",
     "aws-sdk": "2.814.0",
     "aws4": "^1.10.1",
     "base-64": "^0.1.0",
@@ -156,13 +156,11 @@
     "helmet": "^3.23.3",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
-    "moment": "^2.18.1",
-    "moment-range": "^3.0.3",
     "node-fetch": "^2.6.1",
     "number-to-words": "^1.2.4",
     "ophan-tracker-js": "^1.3.16",
     "react": "^16.13.1",
-    "react-daterange-picker": "^2.0.1",
+    "react-date-range": "^1.1.3",
     "react-dom": "^16.13.1",
     "source-map-support": "^0.5.19",
     "stylis-pxtorem": "^0.0.2",
