--- a/.github/workflows/snyk.monitor.yml
+++ b/.github/workflows/snyk.monitor.yml
@@ -14,4 +14,5 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
+          args: --org=the-guardian-cuu --project-name=guardian/manage-frontend
           command: monitor
