[RB] - update instance size for CODE env to t4g.small and use new manage-frontent-arm amigo recipe (newer version of ubuntu (bionic) using ARM)

--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -1,7 +1,7 @@
 regions:
-- eu-west-1
+  - eu-west-1
 stacks:
-- support
+  - support
 deployments:
   manage-frontend-cloudformation:
     type: cloud-formation
@@ -9,7 +9,7 @@ deployments:
     parameters:
       templatePath: cloudformation/cfn.yaml
       amiTags:
-        Recipe: manage-frontend
+        Recipe: manage-frontend-arm
         AmigoStage: PROD
       amiEncrypted: true
   manage-frontend:
