update pre commit hook to only run linter once

--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn fix && GIT_DIR=../.git && yarn type-check && yarn lint && yarn bundle-check-client-if-changed"
+      "pre-commit": "yarn fix && GIT_DIR=../.git && yarn type-check && yarn bundle-check-client-if-changed"
     }
   },
   "main": "./dist/server",
