Reinstate Storybook dependencies and config

--- a/app/package.json
+++ b/app/package.json
@@ -52,6 +52,10 @@
     "@babel/preset-typescript": "^7.16.0",
     "@emotion/babel-preset-css-prop": "^10.2.1",
     "@guardian/node-riffraff-artifact": "^0.2.2",
+    "@storybook/addon-essentials": "^6.4.10",
+    "@storybook/builder-webpack5": "^6.4.10",
+    "@storybook/manager-webpack5": "^6.4.10",
+    "@storybook/react": "^6.4.10",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.1.0",
     "@types/assets-webpack-plugin": "^7.1.0",
