--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -33,8 +33,8 @@ jobs:
           IDAPI_CLIENT_ACCESS_TOKEN: ${{ secrets.IDAPI_CLIENT_ACCESS_TOKEN }}
         with:
           working-directory: app
-          start: yarn watch
-          wait-on: "http://localhost:9233"
+          start: yarn cypress:server
+          wait-on: "http://localhost:9234"
           wait-on-timeout: 30
           quiet: true
           browser: chrome
