Update TypeScript and Webpack configs

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -42,7 +42,7 @@
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     "types": [
       /* Type declaration files to be included in compilation. */
-      "@emotion/core",
+      "@emotion/react",
       "node",
       "jest"
     ],
