[RB JM] - change baseUrl cypress port config.
added cypress screenshots directory to gitignore

set cypress fixtures config property to false, so that it doesn't try and create the fixture directory inside the cypress directory

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ coverage/
 *.code-workspace
 
 .vscode/
- 
 
 logs/
 /app/node_modules/
@@ -25,3 +24,5 @@ tmp_client_bundle/
 .DS_Store
 .scannerwork/
 app/test-report.xml
+
+app/cypress/screenshots
