Temporarily disable Chromatic and Cypress actions
Whilst working on migrating CI to GitHub Actions there's no need to run
the existing Chromatic and Cypress actions every time as it's using
resources unnecessarily.

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   cypress:
+    if: false # Temporarily disable action
     name: Manage-frontend Cypress
     runs-on: ubuntu-latest
 
