initial cdk setup, loading existing cfn.yaml file. CI and CD setup

--- a/app/riff-raff.yaml
+++ b/app/riff-raff.yaml
@@ -15,7 +15,9 @@ deployments:
     type: cloud-formation
     app: manage-frontend
     parameters:
-      templatePath: cfn.yaml
+      templateStagePaths:
+        CODE: ManageFrontend-CODE.template.json
+        PROD: ManageFrontend-PROD.template.json
       amiTags:
         Recipe: manage-frontend-arm-node16
         AmigoStage: PROD
