Fix path in Husky pre-commit hook

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn fix && GIT_DIR=../.git && yarn type-check && yarn bundle-check-client-if-changed"
+      "pre-commit": "yarn fix && yarn type-check && yarn bundle-check-client-if-changed"
     }
   },
   "main": "./dist/server",
